--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <div class="_cd">
 <h2 class="_ct">Mempelai</h2>
 <div class="_ri">
-<div class="_ii"><div class="_il">Mempelai Putra</div><div class="_iv">Ahmad Nur Sidiq, S.Ag.<br><small style="color:var(--w3);font-weight:400;font-size:0.9rem">Putra Bpk. Karsimin & Ibu Wariyah</small></div></div>
-<div class="_ii"><div class="_il">Mempelai Putri</div><div class="_iv">Laili Anifiyana Cahyani<br><small style="color:var(--w3);font-weight:400;font-size:0.9rem">Putri Bpk. Arifin & Ibu Nur Khasanah</small></div></div>
+<div class="_ii"><div class="_il">Mempelai Putra</div><div class="_iv">Ahmad Nur Sidiq<br><small style="color:var(--w3);font-weight:400;font-size:0.9rem">Putra Bpk. Karsimin & Ibu Wariyah</small></div></div>
+<div class="_ii"><div class="_il">Mempelai Putri</div><div class="_iv">Laily Arifiyana Cahyani<br><small style="color:var(--w3);font-weight:400;font-size:0.9rem">Putri Bpk. Arifin & Ibu Nur Khasanah</small></div></div>
 </div>
 </div>
 <div class="_pf"><div class="_pb"><a href="https://wa.me/6287870805424?text=Halo%20Kak%20Saya%20Tertarik%20Dengan%20Undangan%20Digital" target="_blank" class="_pt">Undangan by LP Tech</a><a href="https://wa.me/6287870805424" target="_blank" class="_pi"><i class="fab fa-whatsapp"></i></a></div></div>
