--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <i class="fas fa-leaf _fd _f4"></i>
 <div class="_mc">
 <section id="_ws" class="_ws">
-<h1 class="_wt">Undangan Pernikahan<br>Ahmad & Laili</h1>
+<h1 class="_wt">Undangan Pernikahan<br>Ahmad & Laily</h1>
 <button class="_wb" onclick="_oi()"><i class="fas fa-heart" style="margin-right:0.6rem"></i>Buka Undangan</button>
 <div class="_pf"><div class="_pb"><a href="https://wa.me/6287870805424?text=Halo%20Kak%20Saya%20Tertarik%20Dengan%20Undangan%20Digital" target="_blank" class="_pt">Undangan by LP Tech</a><a href="https://wa.me/6287870805424" target="_blank" class="_pi"><i class="fab fa-whatsapp"></i></a></div></div>
 </section>
 <header class="_hs" style="display:none">
-<h1 class="_ht">Ahmad & Laili</h1>
+<h1 class="_ht">Ahmad & Laily</h1>
 <p class="_hsu">Dua hati tertaut dalam ikatan suci pernikahan. Dengan ucapan syukur yang tak terhingga atas berkah dan karunia Allah SWT.</p>
 </header>
 <main class="_cs" style="display:none">
