--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <div class="_mc">
 <section id="_ws" class="_ws">
 <h1 class="_wt">Undangan Pernikahan<br>Ahmad & Laily</h1>
+<div style="margin: 2rem 0;"><p style="font-size: 0.9rem; letter-spacing: 0.15em; opacity: 0.8; margin-bottom: 0.5rem;">Kepada Yth.<br>Bapak/Ibu/Saudara/i</p><h2 id="_nm" style="font-family: var(--f1); font-size: 1.4rem; color: var(--w1); font-weight: 600;">Tamu Undangan</h2></div>
 <button class="_wb" onclick="_oi()"><i class="fas fa-heart" style="margin-right:0.6rem"></i>Buka Undangan</button>
 <div class="_pf"><div class="_pb"><a href="https://wa.me/6287870805424?text=Halo%20Kak%20Saya%20Tertarik%20Dengan%20Undangan%20Digital" target="_blank" class="_pt">Undangan by LP Tech</a><a href="https://wa.me/6287870805424" target="_blank" class="_pi"><i class="fab fa-whatsapp"></i></a></div></div>
 </section>
